--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-node_modules
-*.log*
+.output
+.data
 .nuxt
 .nitro
 .cache
-.env
 dist
+node_modules
+logs
+*.log
+.DS_Store
+.fleet
+.idea
+.env
+.env.*
+pnpm-lock.yaml
