--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
+  "name": "NuxtVueTest",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.21",
+    "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.0",
-    "postcss": "^8.4.31",
-    "unplugin-icons": "^0.17.1",
-    "unplugin-vue-components": "^0.25.2"
-  },
-  "overrides": {
-    "vue": "latest"
-  },
-  "dependencies": {
-    "@pinia/nuxt": "^0.5.1",
-    "pinia": "^2.1.7"
+    "vue": "^3.3.7",
+    "vue-router": "^4.2.5"
   }
 }
