--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,14 @@
         "Nuxt",
         "nuxtjs",
         "tailwindcss",
+        "Введите",
+        "Закрыть",
+        "окно",
+        "Оставить",
         "отзыв",
-        "Разместить"
+        "отзыва",
+        "Разместить",
+        "текст",
+        "указали"
     ]
 }
